--- a/mobile/src/main/res/layout/current_exercise_set_item_logged.xml
+++ b/mobile/src/main/res/layout/current_exercise_set_item_logged.xml
@@ -7,7 +7,7 @@
 
         <variable
                 name="loggedSetPojo"
-                type="vzijden.PlannedWorkout.domain.model.LoggedSet"/>
+                type="vzijden.workout.domain.model.LoggedSet"/>
         <variable
                 name="index"
                 type="Integer"/>
