--- a/mobile/src/main/res/layout/current_exercise_set_item_planned.xml
+++ b/mobile/src/main/res/layout/current_exercise_set_item_planned.xml
@@ -7,7 +7,7 @@
 
         <variable
                 name="plannedSet"
-                type="vzijden.PlannedWorkout.domain.model.PlannedSet"/>
+                type="vzijden.workout.domain.model.PlannedSet"/>
         <variable
                 name="index"
                 type="Integer"/>
