--- a/mobile/src/main/res/layout/activity_current_workout.xml
+++ b/mobile/src/main/res/layout/activity_current_workout.xml
@@ -7,7 +7,7 @@
 
         <variable
                 name="currentWorkoutPresenter"
-                type="vzijden.PlannedWorkout.view.PlannedWorkout.CurrentWorkoutPresenter"/>
+                type="vzijden.workout.view.workout.CurrentWorkoutPresenter"/>
     </data>
 
 
@@ -69,7 +69,7 @@
                     android:textSize="16dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{currentWorkoutPresenter.currentRegistration.exercisePojo.name}"/>
+                    android:text="@{currentWorkoutPresenter.currentRegistration.exercise.name}"/>
             <EditText
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toStartOf="parent"
