--- a/mobile/src/main/res/layout/edit_exercise.xml
+++ b/mobile/src/main/res/layout/edit_exercise.xml
@@ -8,7 +8,7 @@
 
         <variable
                 name="editExercisePresenter"
-                type="vzijden.PlannedWorkout.view.exercisePojo.EditExercisePresenter"/>
+                type="vzijden.workout.view.exercise.EditExercisePresenter"/>
     </data>
 
     <LinearLayout
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:transitionName="@{editExercisePresenter.RegistrationAndSets.plannedExercisePojo.exercisePojo.name + `cardview`}">
+                android:transitionName="@{editExercisePresenter.RegistrationAndSets.plannedexercise.exercise.name + `cardview`}">
 
                 <LinearLayout
                         android:padding="16dp"
@@ -41,8 +41,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="16sp"
-                            android:transitionName="@{editExercisePresenter.RegistrationAndSets.plannedExercisePojo.exercisePojo.name + `textview`}"
-                            android:text="@{editExercisePresenter.RegistrationAndSets.plannedExercisePojo.exercisePojo.name}"
+                            android:transitionName="@{editExercisePresenter.RegistrationAndSets.plannedexercise.exercise.name + `textview`}"
+                            android:text="@{editExercisePresenter.RegistrationAndSets.plannedexercise.exercise.name}"
                             android:textColor="@color/text_dark"
                             android:id="@+id/edit_exercise_exercise_spinner"
                             tools:text="Bench press"/>
@@ -52,12 +52,12 @@
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
                             tools:text="Biceps"
-                            app:muscleGroups="@{editExercisePresenter.RegistrationAndSets.plannedExercisePojo.exercisePojo.muscleGroups}"
+                            app:muscleGroups="@{editExercisePresenter.RegistrationAndSets.plannedexercise.exercise.muscleGroups}"
                     />
 
                     <TextView
                             android:layout_width="wrap_content" android:layout_height="wrap_content"
-                            app:fromHtml="@{editExercisePresenter.RegistrationAndSets.plannedExercisePojo.exercisePojo.description}"
+                            app:fromHtml="@{editExercisePresenter.RegistrationAndSets.plannedexercise.exercise.description}"
                     />
 
 
