--- a/mobile/src/main/res/layout/exercise_view.xml
+++ b/mobile/src/main/res/layout/exercise_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vzijden.PlannedWorkout.view.exercisePojo.ExerciseView
+<vzijden.workout.view.exercise.ExerciseView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,4 +17,4 @@
                 android:layout_height="wrap_content"
                 tools:text="name"/>
     </com.google.android.material.card.MaterialCardView>
-</vzijden.PlannedWorkout.view.exercisePojo.ExerciseView>
+</vzijden.workout.view.exercise.ExerciseView>
