--- a/mobile/src/main/res/layout/schedule_item_view.xml
+++ b/mobile/src/main/res/layout/schedule_item_view.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
                 name="scheduleItemView"
-                type="vzijden.PlannedWorkout.view.home.SchedulePresenter.ScheduleItemView"/>
+                type="vzijden.workout.view.home.SchedulePresenter.ScheduleItemView"/>
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
