--- a/mobile/src/main/res/layout/schedule_fragment.xml
+++ b/mobile/src/main/res/layout/schedule_fragment.xml
@@ -5,7 +5,7 @@
 
         <variable
                 name="schedulePresenter"
-                type="vzijden.workout.view.home.SchedulePresenter"/>
+                type="vzijden.workout.view.home.schedule.SchedulePresenter"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
