--- a/mobile/src/main/res/layout/activity_edit_workout.xml
+++ b/mobile/src/main/res/layout/activity_edit_workout.xml
@@ -7,7 +7,7 @@
 
         <variable
                 name="viewModel"
-                type="vzijden.workout.view.edit.workout.EditWorkoutViewModel"/>
+                type="vzijden.workout.view.edit.workout.EditExercisesViewModel"/>
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -67,9 +67,9 @@
                     android:layout_marginEnd="14dp"
                     android:layout_width="match_parent"
                     android:layout_weight="1"
-                    app:data="@{viewModel.exercises}"
-                    app:onItemDeleted="@{viewModel.onItemDeletedListener}"
-                    app:onItemAdded="@{() -> viewModel.onAddExerciseClick()}"
+                    app:data="@{viewModel.exerciseItemViewModels}"
+                    app:onItemDeleted="@{viewModel.onExerciseDeleteClicked}"
+                    app:onItemAdded="@{viewModel.onAddExerciseClicked}"
                     android:layout_height="0dp"
                     android:id="@+id/edit_schedule_recyclerView"/>
         </LinearLayout>
