--- a/mobile/src/main/res/layout/edit_exercise_set_item_view.xml
+++ b/mobile/src/main/res/layout/edit_exercise_set_item_view.xml
@@ -57,6 +57,6 @@
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{() -> viewModel.onDeleteClick(viewModel.id)}"/>
+                android:onClick="@{() -> viewModel.onDeleteClick()}"/>
     </vzijden.workout.view.edit.exercise.SetView>
 </layout>
