--- a/mobile/src/main/res/layout/activity_current_workout.xml
+++ b/mobile/src/main/res/layout/activity_current_workout.xml
@@ -8,10 +8,30 @@
                                        android:layout_height="wrap_content"
                                        app:title="@string/current_workout"
                                        style="@style/actionbar"/>
-    <FrameLayout
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
             android:id="@+id/activity_current_workout_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-    </FrameLayout>
+        </FrameLayout>
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:layout_width="match_parent"
+            android:layout_gravity="bottom"
+            app:fabAlignmentMode="center"
+            android:id="@+id/activity_current_workout_bottom_app_bar"
+            android:layout_height="wrap_content"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_anchor="@id/activity_current_workout_bottom_app_bar"
+            android:src="@android:drawable/ic_input_add"/>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </LinearLayout>
