--- a/mobile/src/main/res/layout/fragment_current_workout_list.xml
+++ b/mobile/src/main/res/layout/fragment_current_workout_list.xml
@@ -12,7 +12,7 @@
                   android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-                app:data="@{viewModel.exercises}"
+                app:data="@{viewModel.sets}"
                 app:onItemAdded="@{viewModel.onAddExerciseClick}"
                 android:id="@+id/fragment_current_workout_list_recyclerview"
                 android:layout_width="match_parent"
